--- a/exercicio1/index.html
+++ b/exercicio1/index.html
@@ -5,12 +5,14 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>CSS - prática guiada 1</title>
+   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
    <header>
       <h1 id="titulo-importante">Este é o título principal da página</h1>
+
    </header>
    <main>
       <h2 class="sub-titulo">Este é o subtítulo, que guarda as seções</h2>
